vlib/v/checker/tests/propagate_result_with_option.out
vlib/v/checker/tests/propagate_result_with_option.vv:6:8: error: to propagate the result call, `bar` must return a result
    4 | 
    5 | fn bar() !string {
    6 |     foo() !
      |           ^
    7 |     return ''
    8 | }
Details: vlib/v/checker/tests/propagate_result_with_option.vv:5:10: details: prepend ! before the declaration of the return type of `bar`
    3 | }
    4 | 
    5 | fn bar() !string {
      |          ~~~~~~~
    6 |     foo() !
    7 |     return ''
