vlib/v/checker/tests/propagate_result_with_option.vv
fn foo() ?string {
	return ''
}

fn bar() !string {
	foo() !
	return ''
}

fn main() {}
